@@ -325,12 +325,13 @@ All schemes used by Nautilus can be used here.</long>
     <schema>
       <key>/schemas/apps/nautilus-actions/preferences/iprefs-alphabetical-order</key>
       <owner>nautilus-actions</owner>
-      <type>int</type>
+      <type>string</type>
       <locale name="C">
-        <short>Sort indicator</short>
-        <long>If set to zero, the actions are maintained in ascending alphabetical order (historical behavior).
-If set to 1, actions are maintained in descending alphabetical order.
-When set to 2, user is free to reorder them via Nautilus-Actions configuration tool.</long>
+        <short>Sort mode</short>
+        <long>This preference indicates the preferred sort mode. Possible values are :
+- "AscendingAlphaOrder": the actions are maintained in ascending alphabetical order (historical behavior).
+- "DescendingAlphaOrder": the actions are maintained in descending alphabetical order.
+- "ManualOrder": user is free to reorder them via Nautilus-Actions configuration tool.</long>
       </locale>
       <default>0</default>
     </schema>
